# Microclimate_Crop_Design_System

./: .env.example  .gitignore  AGENTS.md  DEVLOG.md  LICENSE  README.md  ROADMAP.md  folder_structure.txt  pyproject.toml
docs/: PROJECT_CONTEXT.md  README.md  architecture.md  data_acquisition.md  economics_layer.md  external_validation_datasets.md  modeling_blueprint.md
papers/: README.md
reports/: agroforestry_pipeline.html  anaikadu_preprint.html  benchmark_metrics.json  canopy_features_tn.json  crop_canopy_reachability.csv  crop_canopy_reachability.html  crop_catalog_pattukkottai.html  crop_catalog_register.csv  crop_envelopes_ecocrop.md  crop_envelopes_sourced.csv  data_source_catalog.html  data_source_register.csv  disease_params_sourced.md  economics_inputs_sourced.md  economics_qa.md  loco_metrics.json  loso_full_metrics.json  loso_metrics.json  mondrian_metrics.json  results.json  sensitivity_coconut.md  soil_water_thanjavur.md
scripts/: agmarknet_probe.py  agmarknet_pull.py  benchmark_models.py  build_dashboard.py  build_docx.py  build_lajarda_labels.py  build_oilpalm_labels.py  build_real_dataset.py  build_safe_labels.py  check_dashboard.py  check_soiltemp_gee.py  diag_ood.py  econ_run.py  ee_smoke_test.py  export_results.py  fairdata_download.py  fairdata_files.py  fetch_canopy_features.py  fetch_earth_engine.py  fetch_safe_rasters.py  fetch_validation_data.py  finance_anaikadu.py  geocode_anaikadu.py  inverse_anaikadu.py  launch_downloads.py  make_figures.py  make_paper_figures.py  make_pipeline_figure.py  mondrian_conformal.py  monte_carlo_anaikadu.py  (+8 more)
(+60 files in other folders)
